src/styles.css
:root {
    --background: #f3f3f3;
    --foreground: #fff;
    --box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05) !important;
    --border-radius: 15px;
}

html,
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background-color: var(--background);
}

.header {
    height: 80px;
    background-color: var(--foreground);
    display: flex;
    align-items: center;
    box-shadow: var(--box-shadow);

}

.header img {
    height: 40px;
    margin: 0 10px 0 10px;
}

.header form {
    margin: 0 auto;
}

.header input {
    width: 400px;
    display: inline-block;
    padding: 10px 15px;
    font-size: 20px;
    border-radius: 0;
    -webkit-appearance: none;
    border: 1px solid black;
    border-radius: 5px;
}

.search.search--responsive {
    width: 40%;
    margin-left: 1em
}

.header button {
    display: inline-block;
    padding: 10px 15px;
    font-size: 20px;
    border-radius: 0;
    -webkit-appearance: none;
    border: 1px solid transparent;
    cursor: pointer;

}

.header button img {
    height: 20px;
}

.tilelist {
    width: 70%;
}

.tilelist--responsive {
    width: 100%;
}


.tile {
    box-shadow: var(--box-shadow);
    transition: box-shadow 0.5s;
    margin: 0 auto;
    background-color: var(--foreground);
    margin: 10px 5px 10px 10px;
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow);
    transition: box-shadow 0.5s;
    overflow: hidden;
}



.tile:hover {
    box-shadow: 0 0 3px #515151;
}

.tile--divider {
    display: flex;
}

.tile--left {
    margin-top: 20px;
    width: 70px;

}

.tile--left .upvote {
    margin: 0 auto;
}

.tile--left .downvote {
    margin: 0 auto;
}

.tile--left p {
    margin: 0;
    
}

.upvote--counter {
    text-align: center;
}

.tile--right {
    margin: 0 25px 0 0;
    width: 100%;
}

.tile--right h3 {
    text-align: center;
}

.tile--right .selftext {
    line-height: 1.5em;
    width: 97.5%;
    margin: 0 auto;
}

.tile img {
    max-width: 100%;
    border-radius: var(--border-radius);
    cursor: pointer;
    margin: 0 auto;
    display: block;

}

hr {
    position: relative;
    top: 8px;
    width: 60%;
    margin-bottom: 15px;
}

.tile--footer {
    height: 55px;
    display: flex;
    justify-content: space-between;
}



.tile--footer--comments {
    display: flex;
}



.tile--footer--comments img {
    margin: 2px 5px 10px 0;
    max-width: 24px;
    max-height: 24px;
    border-radius: 0;
    transform: scaleX(-1);

}

.tile--left img {
    max-width: 32px;
    margin-left: 10px;
}

.comments--element {
    background-color: var(--background);
    margin-block-start: 0;
    margin-block-end: 1em;
    border-radius: var(--border-radius);
    min-height: 55px;
    width: 90%;

}

.comments--element h4 {
    margin-left: 10px;
    position: relative;
    top: 5px;
}

.comments--element p {
    margin-left: 10px;
    position: relative;
    top: 5px;
    padding-bottom: 10px;
}

h4 {
    margin-block-start: 0;
    margin-block-end: 0;
}

p {
    margin-block-start: 0.2em;
    margin-block-end: 0;
}

.comments--section {
    margin: 0;
    
}

.downvote {
    transform: rotate(180deg)
}

.sidebar {
    height: 600px;
    width: 30%;
    background-color: var(--foreground);
    margin: 10px 10px 10px 5px;
    border-radius: 15px;
    box-shadow: var(--box-shadow);
    transition: box-shadow 0.5s;

}


.sidebar button {
    width: 100%;
    height: 40px;
    display: block;
    background-color: var(--foreground);
    border: 0.2px solid black;
    border-radius: 5px;

}

.sidebar button:hover {
    box-shadow: 0 0 3px #515151;

}

.sidebar button:active {
    box-shadow: 0 1px #666;
    transform: translateY(1px);
}

select {
    width: 99%;
    height: 2em;
    text-align: center;
    border-radius: 5px;
    display: block;
    margin: 0 auto;
    margin-top: 1em;

}


.content {
    display: flex;
}

iframe {
    display: block;
    margin: 0 auto;
    width: 800px;
    height: 800px;

}

.loader {
    margin: 0 auto;
    height: 150px;
    width: 150px;
    margin-top: 20px;
    margin-bottom: 20px;
}

